--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 <li><h2>Phsychology</h2></li>
 </ul>
 
+<iframe id="inlineFrameExample"
+title="Inline Frame Example"
+width="100%"
+height="20%"
+src="footer.html">
+
+</iframe>
+
 </body>
 
 </html>
