hamster and footer update

--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,11 @@
 
 </head>
 <body>
-    This is footer text
+    <h1> <dt>Homyachok</dt>
+    <dd> eto schastie</dd>
+</h1>
+<h2> DIMA LUBOV </h2>
+<img src="hamster.jfif">
 
 
 </body>
