--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h2>Dima - lubov'!</h2>
 <dt>Homyaki</dt>
 <dd> eto schastie! </dd>
-<img src="https://www.google.com/search?q=hamster&rlz=1C1GCEA_enUS795US795&sxsrf=ACYBGNSskh4GLPSlbHNc9fhCQ4fNswCWLw:1573667542856&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjfs4u34OflAhXlGDQIHZ7qCsAQ_AUIEigB&biw=2048&bih=1010#imgrc=B9Zb4agXIhvXOM:">
+<img src="images/hamster.jfif">
 <iframe id="inlineFrameExample"
 title="Inline Frame Example"
 width="100%"
