--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-
-<html>
-<head>
-<title>Active Lifestyle news aggregator</title>
-
-</head>
-<body>
-
-<ul>
-<li><h2>Meet up</h2></li>
-<li><h2> Activities</h2></li>
-<li><h2>Phsychology</h2></li>
-</ul>
-<h2>Dima - lubov'!</h2>
-<dt>Homyaki</dt>
-<dd> eto schastie! </dd>
-<img src="images/hamster.jfif">
-<iframe id="inlineFrameExample"
-title="Inline Frame Example"
-width="100%"
-height="20%"
-src="footer.html">
-
-</iframe>
-
-</body>
-
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>Первый сайт</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <p>Блог</p>
+      <nav>
+        <a href="index.html">На главную</a>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <h1>День пятнадцатый. Галерея балета</h1>
+        <p>Сегодня почти месяц как я занимаюсь. Подвожу итоги</p>
+        <p>
+          
+          <img src="active-life/images/pink.jpg" alt="Фоточка в розовом" width="115" height="77">
+          <img src="active-life/images/black.jpg" alt="Фоточка в черном" width="115" height="77">
+          <img src="active-life/images/red.jpg" alt="Фоточка в красном" width="115" height="77">
+        </p>
+      </article>
+      <aside>
+        Тут могла быть ваша реклама
+      </aside>
+    </main>
+    <footer>
+      Подвал сайта
+    </footer>
+  </body>
 </html>
