--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <p>Сегодня почти месяц как я занимаюсь. Подвожу итоги</p>
         <p>
           
-          <img src="pink.jpg" alt="Фоточка в розовом" width="115" height="77">
-          <img src="black.jpg" alt="Фоточка в черном" width="115" height="77">
+          <img src="images/pink.jpg" alt="Фоточка в розовом" width="115" height="77">
+          <img src="/images/black.jpg" alt="Фоточка в черном" width="115" height="77">
           <img src="red.jpg" alt="Фоточка в красном" width="115" height="77">
         </p>
       </article>
