--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <center>
+      <img src="me.jpg">
     <header>
       <p>Блог</p>
       <nav>
@@ -30,5 +32,6 @@
     <footer>
       Подвал сайта
     </footer>
+    </center>
   </body>
 </html>
