--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    {
+      background: url(images/me.jpg);
+  
+    }
     <center>
       <img src="me.jpg">
     <header>
@@ -21,8 +25,8 @@
         <p>
           
           <img src="images/pink.jpg" alt="Фоточка в розовом" width="115" height="77">
-          <img src="/images/black.jpg" alt="Фоточка в черном" width="115" height="77">
-          <img src="red.jpg" alt="Фоточка в красном" width="115" height="77">
+          <img src="images/black.jpg" alt="Фоточка в черном" width="115" height="77">
+          <img src="images/red.jpg" alt="Фоточка в красном" width="115" height="77">
         </p>
       </article>
       <aside>
