--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <title>Первый сайт</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    {
-      background: url(images/me.jpg);
-  
-    }
+  <body background="images/me">
+    
     <center>
       <img src="me.jpg">
     <header>
