--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body background="images/me">
     
     <center>
-      <img src="me.jpg">
+      
     <header>
       <p>Блог</p>
       <nav>
@@ -31,7 +31,7 @@
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      Паркет сайта
     </footer>
     </center>
   </body>
